styles: #1 y #2 añado estilos a about y resume

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
 
       <div class="about-content">
-        <div>
+        <div class="about-content-profile">
           <h3>Perfil</h3>
           <p>
             Me esfuerzo por ofrecer soluciones simples y efectivas a través de
@@ -165,12 +165,12 @@
           </ul>
         </div>
 
-        <div>
+        <div class="about-content-skills">
           <h3>Skills</h3>
           <p>
             Como desarrollador fullstack, he perfeccionado un conjunto diverso
             de habilidades para abordar desafíos desde todos los ángulos. Dejo
-            aquí algunas de mis habilidades.
+            aquí algunas de mis habilidades...
           </p>
 
           <ul class="skill-bars">
@@ -221,13 +221,13 @@
     <section id="resume" class="grey-section">
       <div class="section-intro">
         <div>
-          <h5>Resume</h5>
-          <h1>More of my credentials.</h1>
+          <h5>RESUMEN</h5>
+          <h1>Más de mis credenciales.</h1>
 
           <p class="lead">
-            Lorem ipsum Do commodo in proident enim in dolor cupidatat
-            adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem
-            ipsum Consectetur ut in in eu do.
+            Aunque me considero un eterno aprendiz, mi travesía en el desarrollo
+            fullstack ha sido una sinfonía de desafíos apasionantes y
+            descubrimientos continuos.
           </p>
         </div>
       </div>
@@ -235,9 +235,8 @@
 
       <div class="resume-timeline">
         <div class="resume-header">
-          <h2>Work Experience</h2>
+          <h2>Educación</h2>
         </div>
-        <!-- /resume-header -->
 
         <div>
           <div class="timeline-wrap">
@@ -247,18 +246,21 @@
               </div>
 
               <div class="timeline-header">
-                <h3>UI Designer</h3>
-                <p>July 2015 - Present</p>
+                <h3>OXYGEN Academy</h3>
+                <p>2023 - 2024</p>
               </div>
 
               <div class="timeline-content">
-                <h4>Awesome Studio</h4>
+                <h4>Training Advanced full-stack</h4>
                 <p>
-                  Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                  magna consectetur nisi cupidatat laboris esse eiusmod deserunt
-                  aute do quis velit esse sed Ut proident cupidatat nulla esse
-                  cillum laborum occaecat nostrud sit dolor incididunt amet est
-                  occaecat nisi.
+                  Mi experiencia en el training ha sido como una inmersión en
+                  las últimas tecnologías, con sprints semanales que recrean un
+                  entorno laboral real. En este viaje formativo, he pulido mis
+                  habilidades con tecnologías de vanguardia y he aprendido a
+                  desenvolverme con agilidad en proyectos con plazos ajustados.
+                  Este programa ha sido más que un entrenamiento; ha sido una
+                  preparación intensiva para enfrentar los retos del desarrollo
+                  web con confianza y destreza.
                 </p>
               </div>
             </div>
@@ -270,18 +272,19 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Front-end Developer</h3>
-                <p>July 2014 - June 2015</p>
+                <h3>Universidad Utel</h3>
+                <p>2022-2023</p>
               </div>
 
               <div class="timeline-content">
-                <h4>Super Cool Agency</h4>
+                <h4>Full-stack Developer (7 Meses)</h4>
                 <p>
-                  Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                  magna consectetur nisi cupidatat laboris esse eiusmod deserunt
-                  aute do quis velit esse sed Ut proident cupidatat nulla esse
-                  cillum laborum occaecat nostrud sit dolor incididunt amet est
-                  occaecat nisi incididunt.
+                  En mi travesía de 7 meses como desarrollador full-stack, he
+                  abrazado la dualidad entre el front y el back-end con
+                  entusiasmo y dedicación. Cada línea de código es una historia
+                  de aprendizaje y superación, desde mis primeros pasos en el
+                  diseño de interfaces cautivadoras hasta la gestión eficiente
+                  de bases de datos complejas.
                 </p>
               </div>
             </div>
@@ -293,32 +296,29 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Web Designer</h3>
-                <p>May 2013 - June 2014</p>
+                <h3>Codecademy</h3>
+                <p>2021-2022</p>
               </div>
 
               <div class="timeline-content">
-                <h4>Great Designs Studio</h4>
+                <h4>Front-end Developer +1200H</h4>
                 <p>
-                  Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                  magna consectetur nisi cupidatat laboris esse eiusmod deserunt
-                  aute do quis velit esse sed Ut proident cupidatat nulla esse
-                  cillum laborum occaecat nostrud sit dolor incididunt amet est
-                  occaecat nisi incididunt.
+                  A través de esta experiencia, he perfeccionado mi habilidad
+                  para crear interfaces cautivadoras y funcionales. Explorando
+                  desde los fundamentos hasta las últimas tendencias, este curso
+                  ha sido mi brújula en la creación de experiencias digitales.
                 </p>
               </div>
             </div>
             <!-- /timeline-block -->
           </div>
-          <!-- /timeline-wrap -->
         </div>
-        <!-- / -->
       </div>
       <!-- /resume-timeline -->
 
       <div class="resume-timeline">
         <div class="resume-header">
-          <h2>Education</h2>
+          <h2>Experiencia laboral</h2>
         </div>
         <!-- /resume-header -->
 
@@ -330,18 +330,19 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Master Degree</h3>
-                <p>July 2015 - Present</p>
+                <h3>Full-stack developer</h3>
+                <p>2021 - Present</p>
               </div>
 
               <div class="timeline-content">
-                <h4>University of Life</h4>
+                <h4>Freelance developer</h4>
                 <p>
-                  Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                  magna consectetur nisi cupidatat laboris esse eiusmod deserunt
-                  aute do quis velit esse sed Ut proident cupidatat nulla esse
-                  cillum laborum occaecat nostrud sit dolor incididunt amet est
-                  occaecat nisi.
+                  Explorando mi camino como freelance full-stack, he dado vida a
+                  una serie de proyectos personales, cada uno es un frasco donde
+                  la creatividad se encuentra con la funcionalidad. La magia
+                  radica en el progreso visible: desde las primeras líneas de
+                  código hasta la implementación, cada proyecto es una historia
+                  en evolución.
                 </p>
               </div>
             </div>
@@ -353,18 +354,20 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Bachelor Degree</h3>
-                <p>July 2014 - June 2015</p>
+                <h3>Representante de Ventas</h3>
+                <p>2018 - 2023</p>
               </div>
 
               <div class="timeline-content">
-                <h4>State Design University</h4>
+                <h4>Tecniriego Binéfar</h4>
                 <p>
-                  Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                  magna consectetur nisi cupidatat laboris esse eiusmod deserunt
-                  aute do quis velit esse sed Ut proident cupidatat nulla esse
-                  cillum laborum occaecat nostrud sit dolor incididunt amet est
-                  occaecat nisi incididunt.
+                  Transicion del mundo de las ventas a la programación, llevando
+                  mi habilidad para construir relaciones al rol de Representante
+                  de Ventas en Tecniriego Binéfar. Allí, cultivé conexiones
+                  sólidas, al igual que las bases de un buen código. La
+                  habilidad para entender las necesidades del cliente se
+                  convirtió en un valioso código fuente en mi enfoque hacia la
+                  programación.
                 </p>
               </div>
             </div>
@@ -376,18 +379,21 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Bachelor Degree</h3>
-                <p>May 2013 - June 2014</p>
+                <h3>Representante de ventas</h3>
+                <p>2013 - 2018</p>
               </div>
 
               <div class="timeline-content">
-                <h4>Design College</h4>
+                <h4>Ferreteria Salamero</h4>
                 <p>
-                  Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                  magna consectetur nisi cupidatat laboris esse eiusmod deserunt
-                  aute do quis velit esse sed Ut proident cupidatat nulla esse
-                  cillum laborum occaecat nostrud sit dolor incididunt amet est
-                  occaecat nisi incididunt.
+                  Antes de mi incursión en el desarrollo, desempeñé el rol de
+                  Representante de Ventas en Ferretería Salamero. Durante este
+                  tiempo, perfeccioné mis habilidades de comunicación y
+                  negociación, construyendo relaciones sólidas con clientes y
+                  proveedores. Esta experiencia me brindó una perspectiva única
+                  que fusiono con mi pasión por el desarrollo web, creando
+                  soluciones tecnológicas con un enfoque centrado en el usuario
+                  y orientado a resultados.
                 </p>
               </div>
             </div>
