--- a/index.html
+++ b/index.html
@@ -407,28 +407,27 @@
     <section id="portfolio">
       <div class="section-intro">
         <div>
-          <h5>Portfolio</h5>
-          <h1>Check Out Some of My Works.</h1>
+          <h5>PORTAFOLIO</h5>
+          <h1>Echa un vistazo a algunos de mis trabajos.</h1>
 
           <p class="lead">
-            Lorem ipsum Do commodo in proident enim in dolor cupidatat
-            adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem
-            ipsum Consectetur ut in in eu do.
+            Te invito a explorar algunos de mis trabajos, donde la funcionalidad
+            se encuentra con la creatividad, y el progreso es evidente en cada
+            rincón de mi portafolio digital.
           </p>
         </div>
       </div>
       <!-- /section-intro-->
       <article class="portfolio-container">
         <div class="portfolio-content">
-          <!-- portfolio-wrapper -->
           <div class="folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/liberty.jpg" alt="Liberty" />
-              <a href="#modal-01" class="overlay">
+              <img src="images/portfolio/miranda.png" alt="Miranda" />
+              <a href="https://omarperez1987.github.io/hotel-miranda/" class="overlay" target="_blank">
                 <div class="folio-item-box">
                   <div class="folio-item-text">
-                    <h3 class="folio-title">Liberty</h3>
-                    <span class="folio-types"> Graphic Design </span>
+                    <h3 class="folio-title">Hotel Miranda</h3>
+                    <span class="folio-types"> Web Development |  JAVASCRIPT</span>
                   </div>
                 </div>
               </a>
@@ -440,15 +439,19 @@
           <div class="folio-item">
             <div class="item-wrap">
               <img
-                class="img-beetle"
-                src="images/portfolio/beetle.jpg"
-                alt="Beetle"
+                class="img-oxygen-shop"
+                src="images/portfolio/oxygen-shop.png"
+                alt="oxygen-shop"
               />
-              <a href="#modal-04" class="overlay">
+              <a
+                href="https://omarperez1987.github.io/oxygen-shop/"
+                class="overlay"
+                target="_blank"
+              >
                 <div class="folio-item-box">
                   <div class="folio-item-text">
-                    <h3 class="folio-title">Beetle</h3>
-                    <span class="folio-types"> Branding </span>
+                    <h3 class="folio-title">Oxygen Shop</h3>
+                    <span class="folio-types"> Web Design | JAVASCRIPT</span>
                   </div>
                 </div>
               </a>
@@ -459,12 +462,18 @@
 
           <div class="folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/salad.jpg" alt="Salad" />
-              <a href="#modal-06" class="overlay">
+              <img src="images/portfolio/kiu.png" alt="Virtual Assistant Kiu" />
+              <a
+                href="https://restaurante-firebase.vercel.app/"
+                class="overlay"
+                target="_blank"
+              >
                 <div class="folio-item-box">
                   <div class="folio-item-text">
-                    <h3 class="folio-title">Salad</h3>
-                    <span class="folio-types"> Branding </span>
+                    <h3 class="folio-title">Virtual Assistant Kiu</h3>
+                    <span class="folio-types">
+                      Web Development | Firebase
+                    </span>
                   </div>
                 </div>
               </a>
@@ -476,12 +485,16 @@
         <div class="portfolio-content">
           <div class="folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug" />
-              <a href="#modal-02" class="overlay">
+              <img src="images/portfolio/dashboard.png" alt="dashboard" />
+              <a
+                href="http://omardev-dashboard-miranda.s3-website.eu-north-1.amazonaws.com/"
+                class="overlay"
+                target="_blank"
+              >
                 <div class="folio-item-box">
                   <div class="folio-item-text">
-                    <h3 class="folio-title">Shutterbug</h3>
-                    <span class="folio-types"> Web Design </span>
+                    <h3 class="folio-title">Dashboard Miranda</h3>
+                    <span class="folio-types"> full software application | AWS </span>
                   </div>
                 </div>
               </a>
@@ -491,12 +504,19 @@
 
           <div class="folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/clouds.jpg" alt="Clouds" />
-              <a href="#modal-03" class="overlay">
+              <img
+                src="images/portfolio/oxygen-search.png"
+                alt="oxygen-search"
+              />
+              <a
+                href="http://omardev-oxygensearch.s3-website.eu-north-1.amazonaws.com/"
+                class="overlay"
+                target="_blank"
+              >
                 <div class="folio-item-box">
                   <div class="folio-item-text">
-                    <h3 class="folio-title">Clouds</h3>
-                    <span class="folio-types"> Web Design </span>
+                    <h3 class="folio-title">Oxygen Search</h3>
+                    <span class="folio-types"> Web Development | AWS </span>
                   </div>
                 </div>
               </a>
@@ -507,12 +527,21 @@
 
           <div class="folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse" />
-              <a href="#modal-05" class="overlay">
+              <img
+                src="./images/portfolio/Likes&Movies.png"
+                alt="Likes & Movies"
+              />
+              <a
+                href="https://likes-movies-alpha870.vercel.app/"
+                class="overlay"
+                target="_blank"
+              >
                 <div class="folio-item-box">
                   <div class="folio-item-text">
-                    <h3 class="folio-title">Lighthouse</h3>
-                    <span class="folio-types"> Web Development </span>
+                    <h3 class="folio-title">Likes & Movies</h3>
+                    <span class="folio-types">
+                      Web Development | API YouTube
+                    </span>
                   </div>
                 </div>
               </a>
