styles: #4 #5 añado estilos a servicios y contacto

--- a/index.html
+++ b/index.html
@@ -423,11 +423,17 @@
           <div class="folio-item">
             <div class="item-wrap">
               <img src="images/portfolio/miranda.png" alt="Miranda" />
-              <a href="https://omarperez1987.github.io/hotel-miranda/" class="overlay" target="_blank">
+              <a
+                href="https://omarperez1987.github.io/hotel-miranda/"
+                class="overlay"
+                target="_blank"
+              >
                 <div class="folio-item-box">
                   <div class="folio-item-text">
                     <h3 class="folio-title">Hotel Miranda</h3>
-                    <span class="folio-types"> Web Development |  JAVASCRIPT</span>
+                    <span class="folio-types">
+                      Web Development | JAVASCRIPT</span
+                    >
                   </div>
                 </div>
               </a>
@@ -494,7 +500,9 @@
                 <div class="folio-item-box">
                   <div class="folio-item-text">
                     <h3 class="folio-title">Dashboard Miranda</h3>
-                    <span class="folio-types"> full software application | AWS </span>
+                    <span class="folio-types">
+                      full software application | AWS
+                    </span>
                   </div>
                 </div>
               </a>
@@ -558,13 +566,13 @@
 
       <div class="section-intro">
         <div>
-          <h5>Services</h5>
-          <h1>What Can I Do For You?</h1>
+          <h5>SERVICIOS</h5>
+          <h1>¿Qué puedo hacer por ti?</h1>
 
           <p class="lead">
-            Lorem ipsum Do commodo in proident enim in dolor cupidatat
-            adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem
-            ipsum Consectetur ut in in eu do.
+            Como alquimista del código, ofrezco un abanico de posibilidades,
+            desde la forja de interfaces cautivadoras hasta la destilación de
+            sistemas back-end eficientes.
           </p>
         </div>
       </div>
@@ -573,102 +581,92 @@
       <div id="swiper-services" class="swiper services-content">
         <div class="swiper-wrapper services-list">
           <div class="swiper-slide service">
-            <span class="icon"><i class="fa-solid fa-earth-europe"></i></span>
+            <span class="icon"><i class="fa-solid fa-code"></i></span>
 
             <div class="service-content">
-              <h3>Webdesign</h3>
+              <h3>Maquetación</h3>
 
               <p class="desc">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit.
+                Combinación de píxeles y elegancia, HTML y CSS son mis
+                herramientas para esculpir la estética digital. Como fullstack,
+                mi enfoque va más allá de las etiquetas y estilos.
               </p>
             </div>
           </div>
           <!-- /service -->
 
           <div class="swiper-slide service">
-            <span class="icon"><i class="icon-window"></i></span>
+            <span class="icon"><i class="fa-solid fa-mortar-pestle"></i></span>
 
             <div class="service-content">
-              <h3>Web Development</h3>
+              <h3>Dinamismo</h3>
 
               <p class="desc">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit.
+                En el caldero del desarrollo, infundo vida con JavaScript y
+                potencio la solidez de tipado con el elixir de TypeScript.
+                Creando así la mezcla perfecta de interfaces dinámicas y
+                estructuras de datos robustas.
               </p>
             </div>
           </div>
           <!-- /service -->
 
           <div class="swiper-slide service">
-            <span class="icon"><i class="icon-paint-brush"></i></span>
+            <span class="icon"><i class="fa-solid fa-cubes-stacked"></i></span>
 
             <div class="service-content">
-              <h3>Branding</h3>
+              <h3>Componentes & Estados</h3>
 
               <p class="desc">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit.
+                Incorporando a la pócima React y Redux transforman la lógica en
+                hechizos, se despliegan con encantamientos y usando los estados
+                crean la esencia misma de la experiencia del usuario.
               </p>
             </div>
           </div>
           <!-- /service -->
 
           <div class="swiper-slide service">
-            <span class="icon"><i class="icon-toggles"></i></span>
+            <span class="icon"><i class="fa-solid fa-gears"></i></span>
 
             <div class="service-content">
-              <h3>UI/UX Design</h3>
+              <h3>Servidor</h3>
 
               <p class="desc">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit.
+                En el taller culinario del desarrollo web, me gusta cocinar
+                sistemas robustos y seguros que sostienen la magia del
+                desarrollo. Cada línea de código es una receta en la
+                construcción de experiencias.
               </p>
             </div>
           </div>
           <!-- /service -->
 
           <div class="swiper-slide service">
-            <span class="icon"><i class="icon-image"></i></span>
+            <span class="icon"><i class="fa-solid fa-book-open"></i></span>
 
             <div class="service-content">
-              <h3>Graphics Design</h3>
+              <h3>Bases de datos</h3>
 
               <p class="desc">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit.
+                En la vasta libreia de datos, mi pericia abarca la creación y
+                gestión de bases de datos, donde cada consulta son las llaves
+                que desbloquean las puertas a información valiosa.
               </p>
             </div>
           </div>
           <!-- /service -->
 
           <div class="swiper-slide service">
-            <span class="icon"><i class="icon-chat"></i></span>
+            <span class="icon"><i class="fa-solid fa-rocket"></i></span>
 
             <div class="service-content">
-              <h3>Consultancy</h3>
+              <h3>Despliegue</h3>
 
               <p class="desc">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit.
+                En el laboratorio digital, utilizando la alquimia moderna de
+                AWS, orquesto el despliegue de aplicaciones, donde cada
+                implementación es un ritual que desata la magia digital.
               </p>
             </div>
           </div>
@@ -683,45 +681,12 @@
     <section class="stats" class="count-up">
       <div class="stat stat-item">
         <div class="icon-part">
-          <i class="fa-solid fa-laptop"></i>
+          <i class="fa-solid fa-suitcase-rolling"></i>
         </div>
 
-        <h3 class="stat-count">1500</h3>
+        <h3 class="stat-count">30</h3>
 
-        <h5 class="stat-title">Projects Completed</h5>
-      </div>
-      <!-- /stat -->
-
-      <div class="stat stat-item">
-        <div class="icon-part">
-          <i class="fa-solid fa-people-group"></i>
-        </div>
-
-        <h3 class="stat-count">900</h3>
-
-        <h5 class="stat-title">Happy Clients</h5>
-      </div>
-      <!-- /stat -->
-
-      <div class="stat stat-item">
-        <div class="icon-part">
-          <i class="fa-solid fa-medal"></i>
-        </div>
-
-        <h3 class="stat-count">200</h3>
-
-        <h5 class="stat-title">Awards Received</h5>
-      </div>
-      <!-- /stat -->
-
-      <div class="stat stat-item">
-        <div class="icon-part">
-          <i class="fa-brands fa-medapps"></i>
-        </div>
-
-        <h3 class="stat-count">120</h3>
-
-        <h5 class="stat-title">Crazy Ideas</h5>
+        <h5 class="stat-title">Viajes</h5>
       </div>
       <!-- /stat -->
 
@@ -730,20 +695,54 @@
           <i class="fa-solid fa-mug-hot"></i>
         </div>
 
-        <h3 class="stat-count">1500</h3>
+        <h3 class="stat-count">750</h3>
 
-        <h5 class="stat-title">Coffee Cups</h5>
+        <h5 class="stat-title">Tazas de café</h5>
       </div>
       <!-- /stat -->
 
       <div class="stat stat-item">
         <div class="icon-part">
-          <i class="fa-regular fa-clock"></i>
+          <i class="fa-solid fa-dumbbell"></i>
         </div>
 
-        <h3 class="stat-count">7200</h3>
+        <h3 class="stat-count">62</h3>
 
-        <h5 class="stat-title">Hours</h5>
+        <h5 class="stat-title">Pagados sin ir</h5>
+      </div>
+      <!-- /stat -->
+
+      <div class="stat stat-item">
+        <div class="icon-part">
+          <i class="fa-solid fa-person-hiking"></i>
+        </div>
+
+        <h3 class="stat-count">54</h3>
+
+        <h5 class="stat-title">Rutas Trekking</h5>
+      </div>
+
+      <!-- /stat -->
+
+      <div class="stat stat-item">
+        <div class="icon-part">
+          <i class="fa-regular fa-lightbulb"></i>
+        </div>
+
+        <h3 class="stat-count">120</h3>
+
+        <h5 class="stat-title">Ideas locas</h5>
+      </div>
+      <!-- /stat -->
+
+      <div class="stat stat-item">
+        <div class="icon-part">
+          <i class="fa-solid fa-laptop-code"></i>
+        </div>
+
+        <h3 class="stat-count">4800</h3>
+
+        <h5 class="stat-title">Horas</h5>
       </div>
     </section>
 
@@ -752,13 +751,13 @@
     <section id="contact">
       <div class="section-intro">
         <div>
-          <h5>Contact</h5>
-          <h1>I'd Love To Hear From You.</h1>
+          <h5>Contacto</h5>
+          <h1>Me encantaría saber de usted.</h1>
 
           <p class="lead">
-            Lorem ipsum Do commodo in proident enim in dolor cupidatat
-            adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem
-            ipsum Consectetur ut in in eu do.
+            Considero que una comunicación abierta y una comprensión profunda
+            son los pilares esenciales para obtener relaciones sólidas y
+            efectivas.
           </p>
         </div>
       </div>
@@ -766,42 +765,37 @@
       <div class="contact-info">
         <div>
           <div class="icon">
-            <i class="icon-pin"></i>
+            <i class="fa-solid fa-location-dot"></i>
           </div>
 
-          <h5>Where to find me</h5>
+          <h5>Donde encontrarme</h5>
 
           <p>
-            1600 Amphitheatre Parkway<br />
-            Mountain View, CA<br />
-            94043 US
+            22500, Binéfar
           </p>
         </div>
 
         <div class="collapse">
           <div class="icon">
-            <i class="icon-mail"></i>
+            <i class="fa-regular fa-envelope"></i>
           </div>
 
-          <h5>Email Me At</h5>
+          <h5>Envíeme un correo electrónico a</h5>
 
           <p>
-            someone@kardswebsite.com<br />
-            info@kardswebsite.com
+            omar.perez.dev@gmail.com
           </p>
         </div>
 
         <div>
           <div class="icon">
-            <i class="icon-phone"></i>
+            <i class="fa-solid fa-phone"></i>
           </div>
 
-          <h5>Call Me At</h5>
+          <h5>Llámame a</h5>
 
           <p>
-            Phone: (+63) 555 1212<br />
-            Mobile: (+63) 555 0100<br />
-            Fax: (+63) 555 0101
+            Mobile: +34 687316707<br />
           </p>
         </div>
       </div>
@@ -815,19 +809,29 @@
         <div class="footer-social-container">
           <ul class="footer-social">
             <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.linkedin.com/in/omar-perezr/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-behance"></i></a>
+              <a href="https://github.com/omarPerez1987"
+                ><i class="fa-brands fa-github"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="https://twitter.com/omar_perez_dev"
+                ><i class="fa fa-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-dribbble"></i></a>
+              <a href="https://t.me/omarp_dev"
+                ><i class="fa-brands fa-telegram"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="https://discordapp.com/users/1190003800442945546"
+                ><i class="fa-brands fa-discord"></i
+              ></a>
             </li>
           </ul>
         </div>
