feature: añado funcionalidad a state

--- a/index.html
+++ b/index.html
@@ -627,6 +627,23 @@
           <!-- /service -->
 
           <div class="swiper-slide service">
+            <span class="icon"><i class="fa-solid fa-flask"></i></span>
+
+            <div class="service-content">
+              <h3>Testing</h3>
+
+              <p class="desc">
+                En el laboratorio de pruebas, aseguro la calidad con Jest y la
+                visión completa con pruebas End-to-End. Cada test es una fórmula
+                mágica, donde Jest revela la esencia de cada función y las
+                pruebas End-to-End exploran la magia completa de las
+                aplicaciones.
+              </p>
+            </div>
+          </div>
+          <!-- /service -->
+
+          <div class="swiper-slide service">
             <span class="icon"><i class="fa-solid fa-gears"></i></span>
 
             <div class="service-content">
@@ -684,7 +701,7 @@
           <i class="fa-solid fa-suitcase-rolling"></i>
         </div>
 
-        <h3 class="stat-count">30</h3>
+        <h3 id="countUpTravel" class="stat-count">30</h3>
 
         <h5 class="stat-title">Viajes</h5>
       </div>
@@ -770,9 +787,7 @@
 
           <h5>Donde encontrarme</h5>
 
-          <p>
-            22500, Binéfar
-          </p>
+          <p>22500, Binéfar</p>
         </div>
 
         <div class="collapse">
@@ -782,9 +797,7 @@
 
           <h5>Envíeme un correo electrónico a</h5>
 
-          <p>
-            omar.perez.dev@gmail.com
-          </p>
+          <p>omar.perez.dev@gmail.com</p>
         </div>
 
         <div>
@@ -794,9 +807,7 @@
 
           <h5>Llámame a</h5>
 
-          <p>
-            Mobile: +34 687316707<br />
-          </p>
+          <p>Mobile: +34 687316707<br /></p>
         </div>
       </div>
     </section>
