añado botones de contacto en header

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
           </nav>
         </div>
       </div>
+      <div class="contact-header">
+        <div>
+          <a href="#contact" title="Hire Me" class="button button-header stroke smoothscroll"
+            >Contáctame</a
+          >
+          <a
+            href="https://drive.google.com/file/d/1n2urZwRy3XAV-xPF3Rz0gAd_9zMBZ66-/view?usp=sharing"
+            title="Download CV"
+            class="button button-header stroke"
+            target="_blank"
+          >
+            Descargar CV
+          </a>
+        </div>
+      </div>
     </header>
     <!-- /header -->
 
@@ -206,7 +221,7 @@
           <a
             href="https://drive.google.com/file/d/1n2urZwRy3XAV-xPF3Rz0gAd_9zMBZ66-/view?usp=sharing"
             title="Download CV"
-            class="button button-black"
+            class="button button-black stroke"
             target="_blank"
           >
             Descargar CV
