añado cambios en vista mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
       </div>
       <div class="contact-header">
         <div>
-          <a href="#contact" title="Hire Me" class="button button-header stroke smoothscroll"
+          <a
+            href="#contact"
+            title="Hire Me"
+            class="button button-header stroke smoothscroll"
             >Contáctame</a
           >
           <a
@@ -345,70 +348,18 @@
               </div>
 
               <div class="timeline-header">
-                <h3>Full-stack developer</h3>
-                <p>2021 - Present</p>
+                <h3>OXYGEN Workspace</h3>
+                <p>2023 - Present</p>
               </div>
 
               <div class="timeline-content">
-                <h4>Freelance developer</h4>
+                <h4>Hotel Miranda | Full-stack developer</h4>
                 <p>
-                  Explorando mi camino como freelance full-stack, he dado vida a
-                  una serie de proyectos personales, cada uno es un frasco donde
-                  la creatividad se encuentra con la funcionalidad. La magia
-                  radica en el progreso visible: desde las primeras líneas de
-                  código hasta la implementación, cada proyecto es una historia
-                  en evolución.
-                </p>
-              </div>
-            </div>
-            <!-- /timeline-block -->
-
-            <div class="timeline-block">
-              <div class="timeline-ico">
-                <i class="fa fa-briefcase"></i>
-              </div>
-
-              <div class="timeline-header">
-                <h3>Representante de Ventas</h3>
-                <p>2018 - 2023</p>
-              </div>
-
-              <div class="timeline-content">
-                <h4>Tecniriego Binéfar</h4>
-                <p>
-                  Transicion del mundo de las ventas a la programación, llevando
-                  mi habilidad para construir relaciones al rol de Representante
-                  de Ventas en Tecniriego Binéfar. Allí, cultivé conexiones
-                  sólidas, al igual que las bases de un buen código. La
-                  habilidad para entender las necesidades del cliente se
-                  convirtió en un valioso código fuente en mi enfoque hacia la
-                  programación.
-                </p>
-              </div>
-            </div>
-            <!-- /timeline-block -->
-
-            <div class="timeline-block">
-              <div class="timeline-ico">
-                <i class="fa fa-briefcase"></i>
-              </div>
-
-              <div class="timeline-header">
-                <h3>Representante de ventas</h3>
-                <p>2013 - 2018</p>
-              </div>
-
-              <div class="timeline-content">
-                <h4>Ferreteria Salamero</h4>
-                <p>
-                  Antes de mi incursión en el desarrollo, desempeñé el rol de
-                  Representante de Ventas en Ferretería Salamero. Durante este
-                  tiempo, perfeccioné mis habilidades de comunicación y
-                  negociación, construyendo relaciones sólidas con clientes y
-                  proveedores. Esta experiencia me brindó una perspectiva única
-                  que fusiono con mi pasión por el desarrollo web, creando
-                  soluciones tecnológicas con un enfoque centrado en el usuario
-                  y orientado a resultados.
+                  Desarrollo de un proyecto integral para la cadena hotelera,
+                  abarcando tanto la interfaz visual para el usuario final como
+                  la plataforma administrativa. Además, llevé a cabo la
+                  implementación del servidor, asegurando una solución completa
+                  y cohesiva.
                 </p>
               </div>
             </div>
@@ -506,7 +457,7 @@
         <div class="portfolio-content">
           <div class="folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/dashboard.png" alt="dashboard" />
+              <img src="images/portfolio/dasboard.png" alt="dashboard" />
               <a
                 href="http://omardev-dashboard-miranda.s3-website.eu-north-1.amazonaws.com/"
                 class="overlay"
