--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="item-wrap">
               <img src="images/portfolio/dasboard.png" alt="dashboard" />
               <a
-                href="http://omardev-dashboard-miranda.s3-website.eu-north-1.amazonaws.com/"
+                href="http://dashboard-miranda-rr.s3-website.eu-west-3.amazonaws.com/"
                 class="overlay"
                 target="_blank"
               >
