--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             >Contáctame</a
           >
           <a
-            href="https://drive.google.com/file/d/1QXa5JbA-KBPE6kEvMl-rTN9FYZB4VemV/view?usp=sharing"
+            href="https://drive.google.com/file/d/15_InVLYD39MB28SvRvlNvbtPaPrR-pl9/view?usp=sharing"
             title="Download CV"
             class="button button-header stroke"
             target="_blank"
@@ -198,7 +198,7 @@
             </li>
             <li>
               <div class="progress percent80"><span>80%</span></div>
-              <strong>JAVASCRIPT</strong>
+              <strong>JAVASCRIPT & TYPESCRIPT</strong>
             </li>
             <li>
               <div class="progress percent80"><span>80%</span></div>
@@ -212,6 +212,14 @@
               <div class="progress percent75"><span>75%</span></div>
               <strong>MONGODB & MYSQL</strong>
             </li>
+            <li>
+              <div class="progress percent70"><span>70%</span></div>
+              <strong>PYTHON & DJANGO</strong>
+            </li>
+            <li>
+              <div class="progress percent50"><span>50%</span></div>
+              <strong>AWS & CLI</strong>
+            </li>
           </ul>
         </div>
       </div>
@@ -222,7 +230,7 @@
             >Contáctame</a
           >
           <a
-            href="https://drive.google.com/file/d/1QXa5JbA-KBPE6kEvMl-rTN9FYZB4VemV/view?usp=sharing"
+            href="https://drive.google.com/file/d/15_InVLYD39MB28SvRvlNvbtPaPrR-pl9/view?usp=sharing"
             title="Download CV"
             class="button button-black stroke"
             target="_blank"
@@ -390,7 +398,7 @@
             <div class="item-wrap">
               <img src="images/portfolio/miranda.png" alt="Miranda" />
               <a
-                href="https://omarperez1987.github.io/hotel-miranda/"
+                href="http://51.44.22.83/"
                 class="overlay"
                 target="_blank"
               >
@@ -398,7 +406,7 @@
                   <div class="folio-item-text">
                     <h3 class="folio-title">Hotel Miranda</h3>
                     <span class="folio-types">
-                      Web Development | JAVASCRIPT</span
+                      Web Development | DJANGO</span
                     >
                   </div>
                 </div>
